Updated lcm_ros package - Java compiles correctly (including lcm-spy plugins) - Both devel and install space have been fixed - Added dependency on LCM via oh-distro

--- a/lcm_ros/package.xml
+++ b/lcm_ros/package.xml
@@ -8,8 +8,7 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>roscpp</depend>
-  <depend>rospy</depend>
-  <depend>lcm</depend>
-  <depend>Java</depend>
+  <depend>oh-distro</depend>
+  <depend>oh-distro-lcm</depend>
+  <depend>java</depend>
 </package>
