--- a/lcm_catkin/package.xml
+++ b/lcm_catkin/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>lcm_ros</name>
+  <name>lcm_catkin</name>
   <version>1.1.0</version>
   <description>The Leighweight Marshalling library package</description>
   <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
@@ -8,7 +8,6 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>oh-distro</depend>
-  <depend>oh-distro-lcm</depend>
+  <depend>liblcm</depend>
   <depend>java</depend>
 </package>
